--- a/less/login.less
+++ b/less/login.less
@@ -36,12 +36,14 @@
   .label {
     display: block;
     padding-bottom: 9px;
-    font-size: .9rem;
+    font-size: 1.2rem;
   }
 
   .textInput {
     display: block;
     width: 100%;
+    font-size: 1.2rem;
+    padding-left: 8px;
     border: 1px solid #aaa;
     border-radius: 3px;
     height: 30px;
